# rabitq-ann-search

./: .gitignore  CMakeLists.txt  README.md  eval_output.txt  pyproject.toml  setup.py
apps/: benchmark.cpp  test_hnsw.cpp  test_itq.cpp  test_nbit.cpp
bench/: plot_results.py  run_benchmark.py  setup_vibe.sh
bench/vibe-module/: config.yml  image.def  module.py
build-ext/: CMakeCache.txt  Makefile  cmake_install.cmake
configs/: benchmark.yaml  default.yaml  sift1m.yaml
cphnsw/: __init__.py  __main__.py  datasets.py  eval.py  gpu.py  metrics.py  paths.py
cphnsw/bench/: eval_mechanisms.py  plot_results.py  run_benchmark.py
docs/: alignment_map.md  research_spec.md
evaluation/: eval_master.cpp
experiments/baselines/: faiss_ivfpq.yaml  hnswlib.yaml
experiments/construction/: threads.yaml
experiments/memory/: dimensions.yaml
experiments/recall_qps/: gist1m.yaml  sift1m.yaml
experiments/scalability/: large_scale.yaml
include/cphnsw/api/: hnsw_index.hpp  index.hpp  params.hpp  rabitq_index.hpp
include/cphnsw/core/: adaptive_defaults.hpp  adaptive_gamma.hpp  codes.hpp  constants.hpp  evt_crc.hpp  memory.hpp  omp_compat.hpp  types.hpp  util.hpp
include/cphnsw/distance/: fastscan_kernel.hpp  fastscan_layout.hpp  metric_policy.hpp
include/cphnsw/encoder/: dense_rotation.hpp  rabitq_encoder.hpp  rotation.hpp
include/cphnsw/encoder/transform/: fht.hpp
include/cphnsw/graph/: flat_graph.hpp  graph_refinement.hpp  neighbor_block.hpp  neighbor_selection.hpp  rabitq_graph.hpp  visitation_table.hpp
include/cphnsw/io/: serialization.hpp
include/cphnsw/search/: rabitq_search.hpp  search_engine.hpp
papers/: CONSTRUCTION_ANALYSIS.md
python/cphnsw/: __init__.py  datasets.py  evaluator.py  gpu.py  metrics.py  plotting.py
python/cphnsw/scripts/: eval.py  train.py
scripts/: eval.py  reproduce_results.sh  sweep.py  train.py
src/: bindings.cpp
src/cphnsw/: __init__.py  plotting.py
src/cpp/: bindings.cpp  eval_master.cpp
src/cpp/cphnsw/api/: params.hpp  rabitq_index.hpp
src/cpp/cphnsw/core/: codes.hpp  memory.hpp  types.hpp
src/cpp/cphnsw/distance/: fastscan_kernel.hpp  fastscan_layout.hpp
src/cpp/cphnsw/encoder/: rabitq_encoder.hpp  rotation.hpp
src/cpp/cphnsw/encoder/transform/: fht.hpp
src/cpp/cphnsw/graph/: graph_refinement.hpp  neighbor_selection.hpp  rabitq_graph.hpp  visitation_table.hpp
src/cpp/cphnsw/search/: rabitq_search.hpp
tests/: conftest.py  test_correctness.py  test_data.hpp  test_encoder_roundtrip.cpp  test_fastscan_correctness.cpp  test_graph_construction.cpp  test_neighbor_selection.cpp  test_quantized_construction.cpp  test_serialization.cpp
