[build-system]
requires = ["setuptools>=64", "pybind11>=2.12", "cmake>=3.18"]
build-backend = "setuptools.build_meta"

[project]
name = "cphnsw"
version = "0.1.0"
description = "RaBitQ approximate nearest neighbor search"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.26,<2",
    "pytest>=7.0,<9",
    "psutil>=5.9,<7",
    "pyyaml>=6.0,<7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cphnsw*"]
