[build-system]
requires = ["setuptools==75.8.0", "pybind11==2.13.6", "cmake==3.30.5"]
build-backend = "setuptools.build_meta"

[project]
name = "cphnsw"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy==1.26.4",
    "psutil==6.1.1",
    "pyyaml==6.0.3",
]

[project.scripts]
cphnsw-eval = "cphnsw.__main__:main"

[tool.setuptools]
packages = ["cphnsw"]
